--- a/.github/workflows/sonar-cloud.yaml
+++ b/.github/workflows/sonar-cloud.yaml
@@ -31,7 +31,7 @@ on:
         description: "Sonar token (Optional, won't publish to sonar if not present)"
 jobs:
   get-runner:
-    uses: component-runner-size-converter.yaml
+    uses: ./.github/workflows/component-runner-size-converter.yaml
     with:
       runner-size: ${{ inputs.runner-size }}
   sonar-cloud:
@@ -47,7 +47,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: ${{ inputs.java-distribution }}
+          distribution: corretto
           java-version: ${{ inputs.java-version }}
           cache: 'gradle'
       - name: Cache SonarCloud packages
