refactor(ci): add `gradle-module` input to `pull-request-kotlin` workflow for customizable artifact naming

--- a/.github/workflows/pull-request-kotlin.yaml
+++ b/.github/workflows/pull-request-kotlin.yaml
@@ -104,7 +104,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-result
+          name: ${{ inputs.gradle-module || 'test-result' }}
           path: |
             ${{ github.workspace }}/build/reports/kover
             **/reports/tests/test
