--- a/.github/workflows/pull-request-kotlin.yaml
+++ b/.github/workflows/pull-request-kotlin.yaml
@@ -89,16 +89,10 @@ jobs:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
           GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # Check if gradle-module is provided and format the command accordingly
-        run: |
-          if [ -z "${{ inputs.gradle-module }}" ]; then
-            # For root project (no module specified)
-            ./gradlew --no-daemon ktlintCheck koverXmlReport koverHtmlReport --parallel
-          else
-            # For specific module
-            ./gradlew --no-daemon ${{ format('{0}:ktlintCheck {0}:koverXmlReport {0}:koverHtmlReport', inputs.gradle-module) }} --parallel
-          fi
-        shell: bash
+        uses: ./.github/actions/gradle-multi-module
+        with:
+          gradle-module: ${{ inputs.gradle-module }}
+          gradle-tasks: 'ktlintCheck koverXmlReport koverHtmlReport'
       # Upload test results
       - name: Upload test results
         if: always()
@@ -118,15 +112,11 @@ jobs:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
           GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        # Check if gradle-module is provided and format the command accordingly
-        run: |
-          if [ -z "${{ inputs.gradle-module }}" ]; then
-            # For root project (no module specified)
-            ./gradlew --no-daemon sonar
-          else
-            # For specific module
-            ./gradlew --no-daemon ${{ format('{0}:sonar', inputs.gradle-module) }}
-          fi
+        uses: ./.github/actions/gradle-multi-module
+        with:
+          gradle-module: ${{ inputs.gradle-module }}
+          gradle-tasks: 'sonar'
+          gradle-args: '--no-daemon'
       - name: Add code coverage to PR
         uses: mi-kas/kover-report@v1
         with:
