refactor(ci): add descriptive job name to `component-runner-size-converter` workflow

--- a/.github/workflows/component-runner-size-converter.yaml
+++ b/.github/workflows/component-runner-size-converter.yaml
@@ -16,6 +16,7 @@ on:
 
 jobs:
   convert:
+    name: Get server configuration
     runs-on: ubuntu-latest
     outputs:
       runner-name: ${{ steps.convert-runner.outputs.runner-name }}
