--- a/.github/workflows/pull-request-kotlin.yaml
+++ b/.github/workflows/pull-request-kotlin.yaml
@@ -68,14 +68,12 @@ jobs:
           # to check out the actual pull request commit, not the merge commit
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-      # Set up JDK
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           distribution: corretto
           java-version: ${{ inputs.java-version }}
           cache: 'gradle'
-      # Cache SonarCloud packages
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
         if: ${{ !inputs.skip-sonar }}
@@ -83,7 +81,15 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      # Run tests with coverage
+      - name: Run linter
+        env:
+          GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
+          GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: monta-app/github-workflows/.github/actions/gradle-multi-module@v3
+        with:
+          gradle-module: ${{ inputs.gradle-module }}
+          gradle-tasks: 'ktlintCheck'
       - name: Run tests with coverage
         env:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
@@ -93,7 +99,6 @@ jobs:
         with:
           gradle-module: ${{ inputs.gradle-module }}
           gradle-tasks: 'ktlintCheck koverXmlReport koverHtmlReport'
-      # Upload test results
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
@@ -105,7 +110,6 @@ jobs:
             /home/runner/.gradle/daemon/**/daemon-*.out.log
           retention-days: 2
           overwrite: true
-      # Upload results to SonarCloud
       - name: Upload results to SonarCloud
         if: ${{ !inputs.skip-sonar }}
         env:
@@ -127,7 +131,6 @@ jobs:
           min-coverage-changed-files: 70
           update-comment: true
           coverage-counter-type: LINE
-      # Publish test results
       - name: Publish test results
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
