--- a/.github/workflows/pull-request-react-pnpm.yaml
+++ b/.github/workflows/pull-request-react-pnpm.yaml
@@ -44,6 +44,7 @@ on:
         description: "Command to run for testing (optional)"
 jobs:
   get-runner:
+    name: Determine runner size
     uses: ./.github/workflows/component-runner-size-converter.yaml
     with:
       runner-size: ${{ inputs.runner-size }}
@@ -53,10 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - uses: Slashgear/action-check-pr-title@v4
-        with:
-          regexp: '^(\[(develop|development|staging)\]\s)?(build|chore|ci|docs|feat|feature|fix|perf|refactor|revert|style|test|release|ignore)(\([\w\- ]+\))?!?: (.+)'
-          helpMessage: "Example: 'feat(app-ui): Add new dashboard component (WEB-123)'"
+      - uses: monta-app/github-workflows/.github/actions/pr-title-check@v3
   lint-build-test:
     name: Lint & Build & Test
     needs: get-runner
