--- a/.github/workflows/sonar-cloud.yaml
+++ b/.github/workflows/sonar-cloud.yaml
@@ -27,6 +27,7 @@ on:
         description: "Sonar token (Optional, won't publish to sonar if not present)"
 jobs:
   get-runner:
+    name: Determine runner size
     uses: ./.github/workflows/component-runner-size-converter.yaml
     with:
       runner-size: ${{ inputs.runner-size }}
