ci: add `GHL_USERNAME` and `GHL_PASSWORD` secrets for Kotlin builds in `build.yaml` workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,6 +43,12 @@ on:
       SLACK_APP_TOKEN:
         required: true
         description: 'Slack app token'
+      GHL_USERNAME:
+        required: false
+        description: 'Github Username (Required for Kotlin builds)'
+      GHL_PASSWORD:
+        required: false
+        description: 'Github Password (Required for Kotlin builds)'
       SENTRY_AUTH_TOKEN:
         required: false
         description: "Sentry Auth Token, this value is injected into the secrets of a docker image"
@@ -142,6 +148,8 @@ jobs:
             ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
           secrets: |
+            GHL_USERNAME=${{ secrets.GHL_USERNAME }}
+            GHL_PASSWORD=${{ secrets.GHL_PASSWORD }}
             SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
             AWS_CDN_ACCESS_KEY_ID=${{ secrets.AWS_CDN_ACCESS_KEY_ID }}
             AWS_CDN_SECRET_ACCESS_KEY=${{ secrets.AWS_CDN_SECRET_ACCESS_KEY }}
