ci: update `deploy-kotlin.yaml` description and default for `docker-file-name` input

--- a/.github/workflows/deploy-kotlin.yaml
+++ b/.github/workflows/deploy-kotlin.yaml
@@ -40,8 +40,8 @@ on:
       docker-file-name:
         required: false
         type: string
-        default: "."
-        description: 'Dockerfile path'
+        description: Name of the docker file to be built
+        default: "Dockerfile"
       additional-build-args:
         required: false
         type: string
