--- a/.github/workflows/component-deploy.yaml
+++ b/.github/workflows/component-deploy.yaml
@@ -46,8 +46,6 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    outputs:
-      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id || inputs.slack-message-id }}
     steps:
       - name: Update existing slack message
         uses: monta-app/slack-notifier-cli-action@main
@@ -103,4 +101,4 @@ jobs:
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
-          slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id || inputs.slack-message-id }}
+          slack-message-id: ${{ inputs.slack-message-id }}
