--- a/.github/workflows/pull-request-kotlin.yaml
+++ b/.github/workflows/pull-request-kotlin.yaml
@@ -41,22 +41,24 @@ on:
         required: true
         description: "SonarCloud token"
 jobs:
-  get-runner:
-    name: Determine runner size
-    uses: ./.github/workflows/component-runner-size-converter.yaml
-    with:
-      runner-size: ${{ inputs.runner-size }}
-  pr_title_checker:
-    name: Check PR title
-    if: ${{ github.event_name == 'pull_request' }}
+  setup:
+    name: Setup
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    outputs:
+      runner-name: ${{ steps.runner.outputs.runner-name }}
     steps:
-      - uses: monta-app/github-workflows/.github/actions/pr-title-check@v3
+      - name: Check PR title
+        uses: monta-app/github-workflows/.github/actions/pr-title-check@v3
+      - name: Get runner name
+        id: runner
+        uses: monta-app/github-workflows/.github/actions/runner-size-converter@v3
+        with:
+          runner-size: ${{ inputs.runner-size }}
   test:
     name: Test with code coverage
-    needs: get-runner
-    runs-on: ${{ needs.get-runner.outputs.runner-name }}
+    needs: setup
+    runs-on: ${{ needs.setup.outputs.runner-name }}
     timeout-minutes: ${{ inputs.test-timeout-minutes }}
     steps:
       # Checkout
